backend/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salud-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/subnets: subnet-b22e9ed4,subnet-eec579b1,subnet-d54a0998
    alb.ingress.kubernetes.io/scheme: internet-facing #Places the load balancer on public subnets
    alb.ingress.kubernetes.io/target-type: ip #The Pod IPs should be used as the target IPs (rather than the node IPs as was the case with NLB in hte previous section)
spec:
  rules:
    - http:
        paths:
        - path: /pacientes
          pathType: Prefix
          backend:
            service:
              name: pacientesapi
              port:
                number: 8185
        - path: /atenciones
          pathType: Prefix
          backend:
            service:
              name: atencionapi
              port:
                number: 8182
        - path: /usuarios
          pathType: Prefix
          backend:
            service:
              name: authapi
              port:
                number: 8183
        - path: /diagnosticos
          pathType: Prefix
          backend:
            service:
              name: diagnosticosapi
              port:
                number: 8184
        - path: /pruebas
          pathType: Prefix
          backend:
            service:
              name: pruebasapi
              port:
                number: 8186
        - path: /resultados
          pathType: Prefix
          backend:
            service:
              name: resultadosapi
              port:
                number: 8187
